# analyze_api

./: .gitignore  LICENSE  README.md  envs.toml  main.py  pyproject.toml  setup.py
analyze_api/: main.py
analyze_api/core/pdf/: pdf_reader_factory.py  pdf_reader_interface.py
analyze_api/core/pdf/impl/: pymupdf_reader.py  pypdf_reader.py
analyze_api/logs/: README.md
analyze_api/service/: analyze_pdf_service.py
analyze_api/temp_pdf_files/: README.md
analyze_api/utilities/: custom_logger.py
analyze_api/utilities/custom_exceptions/: pdf_processing_exception.py
analyze_api/utilities/custom_messages/: error_messages.py  info_messages.py  warning_messages.py
analyze_api/utilities/helpers/: file_helper.py  file_helpers.py  general_helpers.py
logs/: README.md
tests_analyze_api/: __init__.py  test_main.py
