[tool.poetry]
name = "analyze-api"
version = "1.0.0"
description = "Extract, analyze, and answer questions about single or multiple page pdf's using a combination of ocr, machine learning, and large language models."
authors = ["Aloysius", "Trojan"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
debugpy = "^1.8.11"
radon = "^6.0.1"
pylint = "^3.3.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
